--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,15 @@
 .main-container{
+    
+
     border: 2px solid black;
     background-color: rgb(35, 35, 83);
     border-radius: 5px;
-    width: 300px;
-    height: 300px;
+    width: 40vw;
+    height: 40vw;
+}
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(207, 207, 235);
 }
