--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,19 @@
     text-align: right;
     font-size: 40px;
     font-weight: 500;
+    height: 70px;
   }
-  
+  #input-field {
+    text-align: right;
+    font-size: 20px;
+    color: rgb(21, 85, 21);
+  }
+  #output-field {
+    text-align: right;
+    font-size: 35px;
+    color: black
+  }
+
   @media (min-width: 768px) {
     .main-container {
       width: 60%; /* Slightly reduce the width for larger screens */
