--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
   #output-field {
     text-align: right;
     font-size: 35px;
-    color: black
+    color: black;
   }
 
   @media (min-width: 768px) {
