tried to solve bug to be able to operate between three or more numbers

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 
-
+body {
+  background-color: #B9B4C7;
+}
 .main-container {
     width: 90%; /* Take up 90% of the viewport width */
     max-width: 400px; /* Maximum width for larger screens */
@@ -9,7 +11,7 @@
     box-sizing: border-box;
     border: 1px solid #b11e1e;
     border-radius: 10px;
-    background-color: #f9f9f9;
+    background-color: #7E6363;
     
   }
   .display-screen {
@@ -17,16 +19,17 @@
     font-size: 40px;
     font-weight: 500;
     height: 70px;
+    background-color: #3C3D37;
   }
   #input-field {
     text-align: right;
     font-size: 20px;
-    color: rgb(21, 85, 21);
+    color: #ECDFCC;
   }
   #output-field {
     text-align: right;
     font-size: 35px;
-    color: black;
+    color: #EEEEEE;
   }
 
   @media (min-width: 768px) {
@@ -76,7 +79,7 @@
     background-color: #80CBC4;
  }
 
- .operations {
+ .operations, #equal {
     background-color: #ffb74d;
 
  }
@@ -85,5 +88,6 @@
  }
 .rows {
     display: flex;
+    margin: 0;
     justify-content: space-evenly;
 }
